Updated scripts and css

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/javascripts/jquery-3.4.1.slim.min.js')
+    script(src='/javascripts/bootstrap.bundle.min.js')
   body.text-center
     div.cover-container.d-flex.h-100.p-3.mx-auto.flex-column
       header.masthead.mb-auto 
@@ -16,5 +18,5 @@ html
         .inner
           p 
             a(href='https://www.craftbeernamegenerator.com/about.html') This demo uses the craftbeernamegenerator.com API
-    script(src='/javascripts/bootstrap.min.js')
+    
 
