--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,10 @@ html
       header.masthead.mb-auto 
         .inner
           h3.masthead-brand Craft Beer Name Demo
+          nav.nav.nav-masthead.justify-content-center
+            a.nav-link(href='/') Home
+            a.nav-link(href='/login') Log In
+            a.nav-link(href='/logout') Log Out
 
       main.inner.cover(role='main')
         block content
