--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,7 +56,7 @@ body {
 
 .masthead-brand {
   margin-bottom: 0;
-  float: none !important;
+  
 }
 
 .nav-masthead .nav-link {
@@ -141,5 +141,6 @@ body {
   color: #000;
   font-size: 1.25rem;
   padding: 2rem;
+  margin-top: 1rem;
 
 }
