--- a/views/index.pug
+++ b/views/index.pug
@@ -15,12 +15,6 @@ block content
       if error
         p= error
   
-  .session
-    p Session Info
-    if sessionID
-      p= 'Session ID: ' + sessionID 
-    if sessionExpireTime
-      p= 'Session expires in ' + Math.round(sessionExpireTime/1000) + ' seconds'
-    if beersViewed
-      p= 'Beers viewed in this session: ' + beersViewed
+  include session.pug
+
 
