Update how session time is displayed

--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,7 @@ block content
     if sessionID
       p= 'Session ID: ' + sessionID 
     if sessionExpireTime
-      p= 'Session expires in ' + Math.round(sessionExpireTime/1000) + ' seconds'
+      p= 'Session expires in ' + Math.round(sessionExpireTime) + ' seconds'
     if beersViewed
       p= 'Beers viewed in this session: ' + beersViewed
 
